--- a/docs/test.scss
+++ b/docs/test.scss
@@ -1,1 +1,14 @@
-@import "../dist/webkit-sassui-overlay.scss";
+@import "../dist/webkit-sassui-backdrop.scss";
+
+
+button{
+  display: block;
+  width: 100%;
+  padding:14px;
+  border-radius: 5px;
+  background: #007aff;
+  color: #fff;
+  border: none;
+  outline: none;
+  margin-bottom: 20px;
+}
