--- a/docs/test.css
+++ b/docs/test.css
@@ -554,8 +554,16 @@
 }
 
 /* z-index end */
-.webkit-sassui-backdrop {
-  transition: opacity 0.5s;
+@keyframes fade-in {
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fade-out {
+  to {
+    opacity: 0;
+  }
 }
 
 .webkit-sassui-backdrop[data-position=fixed] {
@@ -574,12 +582,13 @@
   background: #fff;
 }
 
-.webkit-sassui-backdrop, .webkit-sassui-backdrop[data-visible=true] {
-  opacity: 0.3;
+.webkit-sassui-backdrop[data-visible=true] {
+  opacity: 0;
+  animation: fade-in 0.5s ease-in forwards;
 }
 
-.webkit-sassui-backdrop[data-visible=false] {
-  opacity: 0;
+.webkit-sassui-backdrop, .webkit-sassui-backdrop[data-visible=false] {
+  animation: fade-out 0.5s ease-in forwards;
 }
 
 /*webkit-sassui-backdrop End*/
@@ -593,4 +602,8 @@ button {
   border: none;
   outline: none;
   margin-bottom: 20px;
+}
+
+button:active {
+  background: #0062cc;
 }
