--- a/docs/test.css
+++ b/docs/test.css
@@ -6,19 +6,28 @@
   left: 0;
 }
 
-@keyframes fade-in {
+@keyframes webkit-sassui-backdrop-fade-in {
   to {
-    opacity: 0.3;
+    background: rgba(0, 0, 0, 0.3);
   }
 }
 
-@keyframes fade-out {
+@keyframes webkit-sassui-backdrop-fade-out {
   from {
-    opacity: 0.3;
+    background: rgba(0, 0, 0, 0.3);
   }
   to {
-    opacity: 0;
+    background: transparent;
   }
+}
+
+.webkit-sassui-backdrop.visible-true, .webkit-sassui-backdrop[data-visible=true] {
+  background: transparent;
+  animation: webkit-sassui-backdrop-fade-in 0.5s ease-in forwards;
+}
+
+.webkit-sassui-backdrop, .webkit-sassui-backdrop.visible-false, .webkit-sassui-backdrop[data-visible=false] {
+  animation: webkit-sassui-backdrop-fade-out 0.5s ease-in forwards;
 }
 
 .webkit-sassui-backdrop[data-position=fixed] {
@@ -27,23 +36,6 @@
 
 .webkit-sassui-backdrop[data-position=absolute] {
   position: absolute;
-}
-
-.webkit-sassui-backdrop[data-color=black] {
-  background: #000;
-}
-
-.webkit-sassui-backdrop[data-color=white] {
-  background: #fff;
-}
-
-.webkit-sassui-backdrop.visible-true, .webkit-sassui-backdrop[data-visible=true] {
-  opacity: 0;
-  animation: fade-in 0.5s ease-in forwards;
-}
-
-.webkit-sassui-backdrop, .webkit-sassui-backdrop.visible-false, .webkit-sassui-backdrop[data-visible=false] {
-  animation: fade-out 0.5s ease-in forwards;
 }
 
 /*webkit-sassui-backdrop End*/
