--- a/docs/test.css
+++ b/docs/test.css
@@ -8,13 +8,13 @@
 
 @keyframes webkit-sassui-backdrop-fade-in {
   to {
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.4);
   }
 }
 
 @keyframes webkit-sassui-backdrop-fade-out {
   from {
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.4);
   }
   to {
     background: transparent;
@@ -23,18 +23,18 @@
 
 .webkit-sassui-backdrop.visible-true, .webkit-sassui-backdrop[data-visible=true] {
   background: transparent;
-  animation: webkit-sassui-backdrop-fade-in 0.5s ease-in forwards;
+  animation: webkit-sassui-backdrop-fade-in 250ms ease-in forwards;
 }
 
 .webkit-sassui-backdrop, .webkit-sassui-backdrop.visible-false, .webkit-sassui-backdrop[data-visible=false] {
-  animation: webkit-sassui-backdrop-fade-out 0.5s ease-in forwards;
+  animation: webkit-sassui-backdrop-fade-out 250ms ease-in forwards;
 }
 
-.webkit-sassui-backdrop[data-position=fixed] {
+.webkit-sassui-backdrop.position-fixed, .webkit-sassui-backdrop[data-position=fixed] {
   position: fixed;
 }
 
-.webkit-sassui-backdrop[data-position=absolute] {
+.webkit-sassui-backdrop.position-absolute, .webkit-sassui-backdrop[data-position=absolute] {
   position: absolute;
 }
 
@@ -43,7 +43,6 @@ button {
   display: block;
   width: 100%;
   padding: 14px;
-  border-radius: 5px;
   background: #007aff;
   color: #fff;
   border: none;
