feat: use latest + is-transparent

--- a/src/index.scss
+++ b/src/index.scss
@@ -19,6 +19,11 @@ $webkit-sassui-backdrop-options:(
   bottom:0;
   left:0;
 
+
+  .is-transparent{
+    opacity: 0.01;
+  }
+
   @keyframes webkit-sassui-backdrop-fade-in {
     to {
       background: rgba($color, $opacity);
