--- a/docs/style.scss
+++ b/docs/style.scss
@@ -1,5 +1,19 @@
 @import "../dist/index.scss";
 
-.test-webkit-sassui-backdrop{
-  border:1px solid red;
+.test-webkit-sassui-backdrop {
+  border: 1px solid red;
+}
+
+button {
+  width: 100%;
+  padding: 14px;
+  border: none;
+  background: #007aff;
+  color: #fff;
+  outline: none;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  &:active {
+    background: darken(#007aff, 10%);
+  }
 }
